redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
#  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        name: redis
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 30
          periodSeconds: 10
        ports:
        - containerPort: 6379
          name: redis
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /data
          name: redis-data
      nodeSelector:
        cache: "true"
      volumes:
      - name: redis-data
        emptyDir: {}
